- Fixed another optimizer issue affecting C struct returns
- Fixed undefined _basic_print_unsigned error.
- Fixed a bug with pin ranges where the limits are variables and are given in (lo, hi) order
- Fixed bitfields in C structs being multiply defined
- Fixed sscanf() and similar string functions not working
- Fixed type of RECV() pointer in Spin2
- Implemented FRAC operator for P1
- New functions __builtin_frac, __builtin_mulh and __builin_muluh for C
- Implemented new (more accurate) IEEE floating point math routines

Version 5.0.8
- Added a warning for casting const pointers to non-const
- Added missing tan function to math.h
- Fixed Spin2 pinread to work correctly with multiple pins
- Fixed an optimizer bug that could cause corruption of small multi-word structs being returned from a C function
- Properly implemented compile time optimization of BASIC ASC("x") function
- New BASIC string functions from JRoark: improved implementations of some existing functions, and added functions CountStr, RemoveChar$, ReplaceChar$, and StrInt$

Version 5.0.7
- Added code to support _ret_ in inline assembly
- Fixed rdlong x, ptra[##BIG] instruction form
- Fixed some bugs in cog_run
- Fixed bit references in arrays like A[x].[y]
- Fixed uhex() bug where it only output 1 bit
- Fixed a serious off-by-one error in garbage collection code

Version 5.0.6
- Added cog_* functions from libsimpletools
- Added get_directions() and get_outputs() functions from simpletools
- Added getms() in Spin2
- Documented _pinstart() function for C
- Fixed an off-by-one in the BASIC INSERT$ function.
- Fixed errors in declarations of C modf() and frexp() functions.
- Fixed read() on terminal to break on newline if applicable
- Improved error messages for type mismatches.
- Made libsimpletext text read use _rxraw() to avoid echo.

Version 5.0.5
- Added the EVENT_* symbols for Spin2
- Added warnings for use of RES memory
- Fixed lseek with SEEK_END on 9p file system